In machine_learning_template.ipynb, in Polynomial Features section, rename transformers and add documentation comment on hyperparameter tuning

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1554,8 +1554,8 @@
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        # Numerical columns: Use a pipeline to create polynomial features followed by feature scaling \n",
-    "        (\"poly_scaler\", Pipeline([\n",
-    "            (\"poly\", PolynomialFeatures(degree=2, include_bias=False)),  # Hyperparameter tuning is recommended to identify the ideal degree of polynomial features\n",
+    "        (\"polynomial_scaler\", Pipeline([\n",
+    "            (\"polynomial\", PolynomialFeatures(degree=2, include_bias=False)),  # degree hyperparameter tuning is recommended \n",
     "            (\"scaler\", StandardScaler())  # Use MinMaxScaler() for min-max normalization\n",
     "        ]), numerical_columns),\n",
     "        \n",
