In machine_learning_template.ipynb, in Polynomial Features section, add markdown comment on use of polynomial features with elastic net regression

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1540,7 +1540,9 @@
     "    -  `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
     "    -  `StandardScaler` to scale features to have mean = 0 and standard deviation = 1 or optionally `MinMaxScaler` to scale features to a range between [0, 1].\n",
     "- Categorical columns: Apply `OneHotEncoder` to convert categorical variables into binary (one-hot) encoded vectors.\n",
-    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`."
+    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`.\n",
+    "\n",
+    "Note: Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting."
    ]
   },
   {
