In machine_learning_template.ipynb, in Summary section, add polynomial features in data preprocessing and remove from next steps

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3719,6 +3719,8 @@
     "    - In a MySQL database table using `sqlalchemy`, `mysql-connector-python`, and `pandas` `to_sql`.\n",
     "- **Train-validation-test split**:\n",
     "    - Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
+    "- **Polynomial features**:\n",
+    "    - Create polynomial features using `sklearn` `PolynomialFeatures`.\n",
     "- **Feature scaling and encoding**:\n",
     "    - Scale numerical features using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
     "    - Encode categorical features using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
@@ -3758,7 +3760,6 @@
     "\n",
     "## Next Steps\n",
     "- Add RandomSearchCV for hyperparameter tuning.\n",
-    "- Add polynomial features.\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Add model deployment as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
