In machine_learning_template.ipynb, in Feature Scaling and Encoding section, add OrdinalEncoder

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1501,7 +1501,9 @@
     "# Feature Scaling and Encoding  \n",
     "Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single pipeline:  \n",
     "- Scale numerical columns: Use `StandardScaler` (scales features to have mean = 0 and standard deviation = 1) or optionally `MinMaxScaler` (scales features to a range between [0, 1]).\n",
-    "- Encode categorical columns: Apply `OneHotEncoder` to convert categorical variables into binary (one-hot) encoded vectors.\n",
+    "- Encode categorical columns:\n",
+    "    - `OneHotEncoder`: Converts string categories into binary (one-hot) encoded columns; use for nominal categories that are unordered (e.g., red, green, blue).\n",
+    "    - `OrdinalEncoder`: Converts string categories into integers; use for ordinal categories that have an inherent order (e.g., low, medium, high).\n",
     "- Pass through boolean columns unchanged: Retain boolean features in their original form using `remainder=\"passthrough\"`."
    ]
   },
@@ -1516,7 +1518,7 @@
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
-    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  \n",
+    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  # Use OrdinalEncoder() for ordinal categories\n",
     "    ],\n",
     "    remainder=\"passthrough\" \n",
     ")\n",
