In machine_learning_template.ipynb, in Feature Scaling and Encoding section, separate nominal vs ordinal within categorical columns and use both in the ColumnTransformer

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1495,22 +1495,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54633ff2-9a06-496b-923a-dd8f0f5a7ff3",
+   "id": "41fa08ad-5d29-458d-8b5d-5153f7c5028e",
    "metadata": {},
    "source": [
     "# Feature Scaling and Encoding  \n",
-    "Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single pipeline:  \n",
-    "- Scale numerical columns: Use `StandardScaler` (scales features to have mean = 0 and standard deviation = 1) or optionally `MinMaxScaler` (scales features to a range between [0, 1]).\n",
+    "Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single step.  \n",
+    "- Scale numerical columns:\n",
+    "    - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
+    "    - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
     "- Encode categorical columns:\n",
-    "    - `OneHotEncoder`: Converts string categories into binary (one-hot) encoded columns; use for nominal categories that are unordered (e.g., red, green, blue).\n",
-    "    - `OrdinalEncoder`: Converts string categories into integers; use for ordinal categories that have an inherent order (e.g., low, medium, high).\n",
+    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
+    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
     "- Pass through boolean columns unchanged: Retain boolean features in their original form using `remainder=\"passthrough\"`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a284ea-8d0c-463e-9c05-fdb054c18082",
+   "id": "27495227-a7bd-4075-b19a-da91cb0fed5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define nominal and ordinal columns\n",
+    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
+    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8131ac-71a4-48c7-bbf0-cecc33d66843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1532,8 @@
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
     "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
-    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  # Use OrdinalEncoder() for ordinal categories\n",
+    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
+    "        (\"ordinal_encoder\", OrdinalEncoder(), ordinal_columns)  \n",
     "    ],\n",
     "    remainder=\"passthrough\" \n",
     ")\n",
