--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1518,7 +1518,14 @@
    "source": [
     "# Define nominal and ordinal columns\n",
     "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
-    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]"
+    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
+    "\n",
+    "# Define the explicit order of categories for all ordinal columns\n",
+    "ordinal_column_orders = [\n",
+    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
+    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
+    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
+    "]"
    ]
   },
   {
@@ -1533,7 +1540,7 @@
     "    transformers=[\n",
     "        (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
     "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
-    "        (\"ordinal_encoder\", OrdinalEncoder(), ordinal_columns)  \n",
+    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
     "    ],\n",
     "    remainder=\"passthrough\" \n",
     ")\n",
