In machine_learning_template.ipynb, in Polynomial Features section, separate nominal and ordinal columns within categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1559,14 +1559,38 @@
    "metadata": {},
    "source": [
     "# Polynomial Features\n",
-    "Create polynomial features in addition to feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single pipeline:  \n",
-    "- Numerical columns: Use a `Pipeline` that combines:\n",
-    "    -  `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
-    "    -  `StandardScaler` to scale features to have mean = 0 and standard deviation = 1 or optionally `MinMaxScaler` to scale features to a range between [0, 1].\n",
-    "- Categorical columns: Apply `OneHotEncoder` to convert categorical variables into binary (one-hot) encoded vectors.\n",
+    "Create polynomial features in addition to feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single step.  \n",
+    "- Numerical columns:\n",
+    "    - `Pipeline` to create polynomial features followed by feature scaling.\n",
+    "    - `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
+    "    - Feature scaling:\n",
+    "        - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
+    "        - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
+    "- Categorical columns: \n",
+    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
+    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
     "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`.\n",
     "\n",
     "Note: Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102df610-c4c8-4dfd-9e92-fd29f88abb08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define nominal and ordinal columns\n",
+    "nominal_columns = [\"nominal_column_1\", \"nominal_column_2\", \"nominal_column_3\"]\n",
+    "ordinal_columns = [\"ordinal_column_1\", \"ordinal_column_2\", \"ordinal_column_3\"]\n",
+    "\n",
+    "# Define the explicit order of categories for all ordinal columns\n",
+    "ordinal_column_orders = [\n",
+    "    [\"low\", \"medium\", \"high\"],  # Order for ordinal_column_1\n",
+    "    [\"poor\", \"average\", \"good\", \"excellent\"],  # Order for ordinal_column_2\n",
+    "    [\"small\", \"medium\", \"large\"]  # Order for ordinal_column_3\n",
+    "]"
    ]
   },
   {
@@ -1585,8 +1609,11 @@
     "            (\"scaler\", StandardScaler())  # Use MinMaxScaler() for min-max normalization\n",
     "        ]), numerical_columns),\n",
     "        \n",
-    "        # Categorical columns: One-hot encoding \n",
-    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  \n",
+    "        # Nominal columns: One-hot encoding\n",
+    "        (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
+    "\n",
+    "        # Ordinal Columns: Ordinal encoding with explicit category order\n",
+    "        (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
     "    ],\n",
     "    remainder=\"passthrough\"  # Keep boolean columns as they are\n",
     ")\n",
