In machine_learning_template.ipynb, in Summary section, add ordinal encoding in data preprocessing section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3774,7 +3774,9 @@
     "    - Create polynomial features using `sklearn` `PolynomialFeatures`.\n",
     "- **Feature scaling and encoding**:\n",
     "    - Scale numerical features using standard scaling with `sklearn` `StandardScaler` or min-max normalization with `MinMaxScaler`.\n",
-    "    - Encode categorical features using one-hot encoding with `sklearn` `OneHotEncoder`.\n",
+    "    - Encode categorical features:\n",
+    "        - Nominal features: Use one-hot encoding with `sklearn` `OneHotEncoder`.\n",
+    "        - Ordinal features: Use ordinal encoding with `sklearn` `OrdinalEncoder`.\n",
     "    - Apply scaling and encoding together using `sklearn` `ColumnTransformer`.\n",
     "\n",
     "## Exploratory Data Analysis (EDA)\n",
