In machine_learning_template.ipynb, in Modeling (Regression) > Training Baseline Models (Pipeline) section, add OrdinalEncoder

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2252,8 +2252,9 @@
     "    # Scale numerical columns and encode categorical columns \n",
     "    column_transformer = ColumnTransformer(\n",
     "        transformers=[\n",
-    "            (\"scaler\", StandardScaler(), numerical_columns),\n",
-    "            (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)\n",
+    "            (\"scaler\", StandardScaler(), numerical_columns),  # Use MinMaxScaler() for min-max normalization\n",
+    "            (\"nominal_encoder\", OneHotEncoder(drop=\"first\"), nominal_columns),\n",
+    "            (\"ordinal_encoder\", OrdinalEncoder(categories=ordinal_column_orders), ordinal_columns)  \n",
     "        ],\n",
     "        remainder=\"passthrough\"  # Include the boolean columns without transformation\n",
     "    )\n",
