In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning section, split into a subsection for grid search and a separate subsection for randomized search

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2305,10 +2305,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "965309eb-9a30-4f41-ab42-97e3f54680ca",
+   "metadata": {},
+   "source": [
+    "### Grid Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
    "metadata": {},
    "source": [
-    "### Random Forest Regressor  \n",
+    "#### Random Forest Regressor  \n",
     "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
@@ -2401,7 +2409,7 @@
    "id": "52b61928-a213-4474-a934-17684a2d041e",
    "metadata": {},
    "source": [
-    "### XGBoost Regressor  \n",
+    "#### XGBoost Regressor  \n",
     "Hyperparameters and Default Values:\n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
@@ -2502,6 +2510,32 @@
     "\n",
     "# Show the top 10 best performing models\n",
     "xgb_grid_search_results.sort_values(\"validation_rmse\")[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a93171-470c-484f-b754-ac268f7d71a4",
+   "metadata": {},
+   "source": [
+    "### Randomized Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d47e4c1-d400-4e94-a03b-99417896b44e",
+   "metadata": {},
+   "source": [
+    "#### Model 1\n",
+    "Example: Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1761c5e-addf-4916-97a7-d44c7b024315",
+   "metadata": {},
+   "source": [
+    "#### Model 2\n",
+    "Example: XGBoost Regressor"
    ]
   },
   {
