In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning > Grid Search section, rename subsection to Model 1 and Model 2

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2316,7 +2316,9 @@
    "id": "8360ea07-5564-47d0-81a7-8203928a18f4",
    "metadata": {},
    "source": [
-    "#### Random Forest Regressor  \n",
+    "#### Model 1\n",
+    "Example: Random Forest Regressor\n",
+    "\n",
     "Hyperparameters and Default Values:\n",
     "- Model Complexity:\n",
     "  - `n_estimators=100`: Number of trees in the forest.  \n",
@@ -2409,7 +2411,9 @@
    "id": "52b61928-a213-4474-a934-17684a2d041e",
    "metadata": {},
    "source": [
-    "#### XGBoost Regressor  \n",
+    "#### Model 2\n",
+    "Example: XGBoost Regressor  \n",
+    "\n",
     "Hyperparameters and Default Values:\n",
     "- Model Complexity:  \n",
     "    - `n_estimators=100`: Number of trees.  \n",
