In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning > Randomized Search section, add hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2521,7 +2521,23 @@
    "id": "14a93171-470c-484f-b754-ac268f7d71a4",
    "metadata": {},
    "source": [
-    "### Randomized Search"
+    "### Randomized Search\n",
+    "Hyperparameters and Default Values:\n",
+    "- Essential Parameters\n",
+    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
+    "    - `param_distributions`: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.  \n",
+    "    - `n_iter=10`: The number of random combinations to sample from the parameter grid.  \n",
+    "- Performance-Related Parameters\n",
+    "    - `cv=5`: Number of folds for cross-validation.  \n",
+    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"roc_auc\"`).  \n",
+    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
+    "    - `random_state=None`: Ensures reproducibility of results.  \n",
+    "- Optional Parameters\n",
+    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
+    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
+    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
+    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
+    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
    ]
   },
   {
