--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2524,12 +2524,12 @@
     "### Randomized Search\n",
     "Hyperparameters and Default Values:\n",
     "- Essential Parameters\n",
-    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
+    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestRegressor`).  \n",
     "    - `param_distributions`: A dictionary where keys are hyperparameter names, and values are the distributions or lists of possible values.  \n",
     "    - `n_iter=10`: The number of random combinations to sample from the parameter grid.  \n",
     "- Performance-Related Parameters\n",
     "    - `cv=5`: Number of folds for cross-validation.  \n",
-    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"roc_auc\"`).  \n",
+    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"neg_mean_squared_error\"`, `\"neg_mean_absolute_error\"`, `\"r2\"`).  \n",
     "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
     "    - `random_state=None`: Ensures reproducibility of results.  \n",
     "- Optional Parameters\n",
