--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3405,7 +3405,21 @@
    "id": "3100fcfa-df5b-459a-b2ff-aff36ee95ca3",
    "metadata": {},
    "source": [
-    "### Grid Search"
+    "### Grid Search  \n",
+    "Hyperparameters and Default Values:  \n",
+    "- Core Parameters  \n",
+    "    - `estimator`: The machine learning model you want to optimize (e.g., `RandomForestClassifier`).  \n",
+    "    - `param_grid`: A dictionary where keys are hyperparameter names, and values are lists of possible values to try.  \n",
+    "    - `cv=5`: Number of folds for cross-validation.  \n",
+    "    - `scoring=None`: The metric to evaluate model performance (e.g., `\"accuracy\"`, `\"precision\"`, `\"recall\"`, `\"f1\"`, `\"roc_auc\"`).  \n",
+    "- Optional Parameters  \n",
+    "    - `verbose=0`: Controls the verbosity of the output. Higher values provide more detailed logs.  \n",
+    "    - `n_jobs=None`: Number of jobs to run in parallel. `-1` uses all available CPU cores.  \n",
+    "    - `pre_dispatch=\"2*n_jobs\"`: Controls the number of jobs that get dispatched during parallel execution.  \n",
+    "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
+    "    - `random_state=None`: Ensures reproducibility of results when estimators or scoring functions involve randomness.  \n",
+    "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
+    "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
    ]
   },
   {
