In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning > update description of most impactful hyperparameters for model 1 and model 2 in grid search and randomized search

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2333,33 +2333,14 @@
     "#### Model 1\n",
     "Example: Random Forest Regressor\n",
     "\n",
-    "Hyperparameters and Default Values:\n",
-    "- Model Complexity:\n",
-    "  - `n_estimators=100`: Number of trees in the forest.  \n",
-    "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.  \n",
-    "  - `min_samples_split=2`: Minimum number of samples required to split a node.  \n",
-    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.  \n",
-    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.  \n",
-    "- Regularization:\n",
-    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.  \n",
-    "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.  \n",
-    "- Training Behavior:\n",
-    "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.  \n",
-    "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.  \n",
-    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).  \n",
-    "  - `random_state=None`: Random seed for reproducibility.  \n",
-    "  - `verbose=0`: Controls the verbosity of output during training.  \n",
-    "- Performance Optimization:\n",
-    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  \n",
-    "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
     "- `max_depth`  \n",
     "- `min_samples_split`\n",
     "- `min_samples_leaf`\n",
-    "- `max_features`"
+    "- `max_features`\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
    ]
   },
   {
@@ -2428,36 +2409,6 @@
     "#### Model 2\n",
     "Example: XGBoost Regressor  \n",
     "\n",
-    "Hyperparameters and Default Values:\n",
-    "- Model Complexity:  \n",
-    "    - `n_estimators=100`: Number of trees.  \n",
-    "    - `max_depth=6`: Maximum depth of each tree.  \n",
-    "    - `learning_rate=0.3`: Step size shrinking to prevent overfitting.  \n",
-    "    - `subsample=1.0`: Fraction of training samples used for each tree.  \n",
-    "    - `colsample_bytree=1.0`: Fraction of features used for each tree.  \n",
-    "    - `colsample_bylevel=1.0`: Fraction of features used at each tree level.  \n",
-    "    - `colsample_bynode=1.0`: Fraction of features used at each node.  \n",
-    "- Regularization and Learning:  \n",
-    "    - `gamma=0`: Minimum loss reduction required to make a further partition on a leaf node.  \n",
-    "    - `min_child_weight=1`: Minimum sum of instance weight (hessian) in a child.  \n",
-    "    - `scale_pos_weight=1`: Controls the balance of positive and negative weights; used for imbalanced datasets.  \n",
-    "- Training Behavior:  \n",
-    "    - `objective=\"reg:squarederror\"`: Objective function for regression; default is for squared error.  \n",
-    "    - `booster=\"gbtree\"`: Booster type; options include `\"gbtree\"` (default), `\"gblinear\"`, and `\"dart\"`.  \n",
-    "    - `tree_method=\"auto\"`: Tree construction algorithm; `\"auto\"` chooses based on system configuration. Options include `\"exact\"`, `\"approx\"`, and `\"hist\"`.  \n",
-    "    - `eval_metric=\"rmse\"`: Metric used for validation during training; default is root mean square error (`rmse`).  \n",
-    "- Performance Optimization:  \n",
-    "    - `early_stopping_rounds=None`: Stops training if validation metric does not improve after specified rounds.  \n",
-    "    - `n_jobs=1`: Number of threads used for parallel computation (`-1` for all processors).  \n",
-    "    - `random_state=None`: Seed for reproducibility.  \n",
-    "    - `verbose=1`: Verbosity level for training output; 0 for silent, higher values show more details.  \n",
-    "- Advanced Parameters:  \n",
-    "    - `lambda=1`: L2 regularization term on weights.  \n",
-    "    - `alpha=0`: L1 regularization term on weights.  \n",
-    "    - `max_delta_step=0`: Used to help with convergence in highly imbalanced datasets.\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html).\n",
-    "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
     "- `max_depth` \n",
@@ -2465,7 +2416,9 @@
     "- `subsample` \n",
     "- `colsample_bytree`\n",
     "- `gamma`\n",
-    "- `min_child_weight`"
+    "- `min_child_weight`\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
    ]
   },
   {
@@ -2559,7 +2512,16 @@
    "metadata": {},
    "source": [
     "#### Model 1\n",
-    "Example: Random Forest Regressor"
+    "Example: Random Forest Regressor\n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth`  \n",
+    "- `min_samples_split`\n",
+    "- `min_samples_leaf`\n",
+    "- `max_features`\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestRegressor documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html#sklearn.ensemble.RandomForestRegressor).  "
    ]
   },
   {
@@ -2568,7 +2530,18 @@
    "metadata": {},
    "source": [
     "#### Model 2\n",
-    "Example: XGBoost Regressor"
+    "Example: XGBoost Regressor  \n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth` \n",
+    "- `learning_rate`\n",
+    "- `subsample` \n",
+    "- `colsample_bytree`\n",
+    "- `gamma`\n",
+    "- `min_child_weight`\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
    ]
   },
   {
