--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3417,34 +3417,14 @@
     "#### Model 1\n",
     "Example: Random Forest Classifier  \n",
     "\n",
-    "Hyperparameters and Default Values:\n",
-    "- Model Complexity:\n",
-    "  - `n_estimators=100`: Number of trees in the forest.\n",
-    "  - `max_depth=None`: Maximum depth of each tree; `None` allows trees to grow until all leaves are pure or minimum samples are reached.\n",
-    "  - `min_samples_split=2`: Minimum number of samples required to split a node.\n",
-    "  - `min_samples_leaf=1`: Minimum number of samples required at a leaf node.\n",
-    "  - `max_features=\"auto\"`: Number of features considered for the best split; default `auto` uses the square root of all features.\n",
-    "- Regularization:\n",
-    "  - `max_leaf_nodes=None`: Maximum number of leaf nodes per tree.\n",
-    "  - `min_impurity_decrease=0.0`: Splits a node only if it decreases impurity by this threshold.\n",
-    "  - `class_weight=None`: Weights associated with classes. If `None`, all classes are supposed to have weight one. Use `\"balanced\"` to automatically adjust weights inversely proportional to class frequencies in the input data.\n",
-    "- Training Behavior:\n",
-    "  - `bootstrap=True`: Whether to use bootstrap samples for training each tree.\n",
-    "  - `oob_score=False`: Whether to use out-of-bag samples to estimate prediction accuracy.\n",
-    "  - `n_jobs=None`: Number of CPU threads used (`-1` for all processors).\n",
-    "  - `random_state=None`: Random seed for reproducibility.\n",
-    "  - `verbose=0`: Controls the verbosity of output during training.\n",
-    "- Performance Optimization:\n",
-    "  - `max_samples=None`: Maximum number of samples used to train each tree, useful for subsampling large datasets.\n",
-    "\n",
-    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier).\n",
-    "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
     "- `max_depth`  \n",
     "- `min_samples_split`\n",
     "- `min_samples_leaf`\n",
-    "- `max_features`"
+    "- `max_features`\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier)."
    ]
   },
   {
@@ -3513,36 +3493,6 @@
     "#### Model 2\n",
     "Example: XGBoost Classifier\n",
     "\n",
-    "Hyperparameters and Default Values:\n",
-    "- Model Complexity:  \n",
-    "    - `n_estimators=100`: Number of trees (boosting rounds).  \n",
-    "    - `max_depth=6`: Maximum depth of each tree.  \n",
-    "    - `learning_rate=0.3`: Step size shrinkage to prevent overfitting.  \n",
-    "    - `subsample=1.0`: Fraction of training samples used per tree.  \n",
-    "    - `colsample_bytree=1.0`: Fraction of features used per tree.  \n",
-    "    - `colsample_bylevel=1.0`: Fraction of features used per tree level.  \n",
-    "    - `colsample_bynode=1.0`: Fraction of features used per split node.  \n",
-    "- Regularization and Learning:  \n",
-    "    - `gamma=0`: Minimum loss reduction required to split a leaf node.  \n",
-    "    - `min_child_weight=1`: Minimum sum of instance weights (hessian) in a child.  \n",
-    "    - `scale_pos_weight=1`: Balances positive and negative class weights for imbalanced datasets.  \n",
-    "- Training Behavior:  \n",
-    "    - `objective=\"binary:logistic\"`: Objective function for binary classification; alternatives include `\"multi:softmax\"` or `\"multi:softprob\"`.  \n",
-    "    - `booster=\"gbtree\"`: Booster type; options include `\"gbtree\"` (default), `\"gblinear\"`, and `\"dart\"`.  \n",
-    "    - `tree_method=\"auto\"`: Tree construction algorithm; options: `\"exact\"`, `\"approx\"`, `\"hist\"`, `\"gpu_hist\"`.  \n",
-    "    - `eval_metric=\"logloss\"`: Default evaluation metric for binary classification. Options include `\"error\"`, `\"auc\"`, and others.  \n",
-    "- Performance Optimization:  \n",
-    "    - `early_stopping_rounds=None`: Stops training if validation metric does not improve after specified rounds.  \n",
-    "    - `n_jobs=1`: Number of threads for parallel computation (`-1` for all processors).  \n",
-    "    - `random_state=None`: Seed for reproducibility.  \n",
-    "    - `verbose=1`: Verbosity level; 0 for silent, higher values for detailed output.  \n",
-    "- Advanced Parameters:  \n",
-    "    - `lambda=1`: L2 regularization term on weights.  \n",
-    "    - `alpha=0`: L1 regularization term on weights.  \n",
-    "    - `max_delta_step=0`: Helps with convergence in imbalanced datasets.\n",
-    "\n",
-    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html).\n",
-    "\n",
     "The following hyperparameters are typically the most impactful:\n",
     "- `n_estimators`\n",
     "- `max_depth` \n",
@@ -3550,7 +3500,9 @@
     "- `subsample` \n",
     "- `colsample_bytree`\n",
     "- `gamma`\n",
-    "- `min_child_weight`"
+    "- `min_child_weight`\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
    ]
   },
   {
@@ -3643,7 +3595,17 @@
    "id": "2eaf9954-e71a-460d-bfbd-e065571e085d",
    "metadata": {},
    "source": [
-    "#### Model 1"
+    "#### Model 1\n",
+    "Example: Random Forest Classifier  \n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth`  \n",
+    "- `min_samples_split`\n",
+    "- `min_samples_leaf`\n",
+    "- `max_features`\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn RandomForestClassifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier)."
    ]
   },
   {
@@ -3651,7 +3613,19 @@
    "id": "a40e89ff-bac7-4401-8b69-1ebb1f782de1",
    "metadata": {},
    "source": [
-    "#### Model 2"
+    "#### Model 2\n",
+    "Example: XGBoost Classifier\n",
+    "\n",
+    "The following hyperparameters are typically the most impactful:\n",
+    "- `n_estimators`\n",
+    "- `max_depth` \n",
+    "- `learning_rate`\n",
+    "- `subsample` \n",
+    "- `colsample_bytree`\n",
+    "- `gamma`\n",
+    "- `min_child_weight`\n",
+    "\n",
+    "For more details, refer to the official [XGBoost documentation](https://xgboost.readthedocs.io/en/latest/parameter.html)."
    ]
   },
   {
