In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning > Random Search, add code to fit random search for model 1 (random forest regressor)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2523,6 +2523,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003b5b8b-5c1c-4d08-9c52-955f165ba8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter distributions \n",
+    "rf_param_distributions = {\n",
+    "    \"n_estimators\": randint(50, 1000),               \n",
+    "    \"max_depth\": randint(5, 50),              \n",
+    "    \"min_samples_split\": randint(2, 20),\n",
+    "    \"min_samples_leaf\": randint(1, 10),\n",
+    "    \"max_features\": uniform(0.1, 0.9)                \n",
+    "}\n",
+    "\n",
+    "# Initialize randomized search object\n",
+    "rf_random_search = RandomizedSearchCV(\n",
+    "    estimator=rf, \n",
+    "    param_distributions=rf_param_distributions, \n",
+    "    n_iter=50,\n",
+    "    cv=5, \n",
+    "    scoring=\"neg_root_mean_squared_error\",  # use \"r2\" for R-squared or a custom function for MAPE\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit the random search to the training data\n",
+    "rf_random_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b1761c5e-addf-4916-97a7-d44c7b024315",
    "metadata": {},
