In machine_learning_template.ipynb, in Modeling (Regression) and Modeling (Classification) > Hyperparameter Tuning > Random Search, import randint and uniform from scipy

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2505,6 +2505,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be264892-bc77-4101-ad36-adf0ef4c525d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import scipy to define the hyperparameter distributions (randint for int, uniform for float)\n",
+    "from scipy.stats import randint, uniform  "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9d47e4c1-d400-4e94-a03b-99417896b44e",
    "metadata": {},
@@ -3617,6 +3628,17 @@
     "    - `refit=True`: If `True`, the estimator is refit on the entire training set using the best parameters.  \n",
     "    - `error_score=np.nan`: Value to assign to the score if a parameter combination results in a failure.  \n",
     "    - `return_train_score=False`: If `True`, training scores will be returned along with validation scores.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b41a01e-ddf1-4fef-aa2e-55d465fdb88e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import scipy to define the hyperparameter distributions (randint for int, uniform for float)\n",
+    "from scipy.stats import randint, uniform  "
    ]
   },
   {
