--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2386,7 +2386,7 @@
     "    \"parameters\": rf_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
-    "# Extract each parameter as a separate column\n",
+    "# Extract each hyperparameter as a separate column\n",
     "rf_grid_search_results[\"n_estimators\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
     "rf_grid_search_results[\"max_depth\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
     "rf_grid_search_results[\"min_samples_split\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
@@ -2466,7 +2466,7 @@
     "    \"parameters\": xgb_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
-    "# Extract each parameter as a separate column\n",
+    "# Extract each hyperparameter as a separate column\n",
     "xgb_grid_search_results[\"n_estimators\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
     "xgb_grid_search_results[\"max_depth\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
     "xgb_grid_search_results[\"learning_rate\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
@@ -2564,6 +2564,33 @@
     "\n",
     "# Fit the random search to the training data\n",
     "rf_random_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78774557-07ff-40dd-8899-5e5cfdeb0bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of randomized search results\n",
+    "rf_random_search_results = pd.DataFrame({\n",
+    "    \"validation_rmse\": -1 * rf_random_search.cv_results_[\"mean_test_score\"],  # RMSE on validation data\n",
+    "    \"parameters\": rf_random_search.cv_results_[\"params\"]  # parameter values\n",
+    "})\n",
+    "\n",
+    "# Extract each hyperparameter as a separate column\n",
+    "rf_random_search_results[\"n_estimators\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "rf_random_search_results[\"max_depth\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "rf_random_search_results[\"min_samples_split\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
+    "rf_random_search_results[\"min_samples_leaf\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
+    "rf_random_search_results[\"max_features\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "rf_random_search_results = rf_random_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models sorted by validation RMSE\n",
+    "rf_random_search_results.sort_values(\"validation_rmse\")[:10]"
    ]
   },
   {
@@ -3512,7 +3539,7 @@
     "    \"parameters\": rf_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
-    "# Extract each parameter as a separate column\n",
+    "# Extract each hyperparameter as a separate column\n",
     "rf_grid_search_results[\"n_estimators\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
     "rf_grid_search_results[\"max_depth\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
     "rf_grid_search_results[\"min_samples_split\"] = rf_grid_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
@@ -3592,7 +3619,7 @@
     "    \"parameters\": xgb_grid_search.cv_results_[\"params\"]  # parameter values\n",
     "}) \n",
     "\n",
-    "# Extract each parameter as a separate column\n",
+    "# Extract each hyperparameter as a separate column\n",
     "xgb_grid_search_results[\"n_estimators\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
     "xgb_grid_search_results[\"max_depth\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
     "xgb_grid_search_results[\"learning_rate\"] = xgb_grid_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
