In machine_learning_template.ipynb, in Modeling (Classification) > Hyperparameter Tuning > Random Search, add code to fit random search for model 1 (random forest classifier)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3687,6 +3687,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea1395f-d2e1-4ff6-8987-652d8aa05867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter distributions \n",
+    "rf_param_distributions = {\n",
+    "    \"n_estimators\": randint(50, 1000),               \n",
+    "    \"max_depth\": randint(5, 50),              \n",
+    "    \"min_samples_split\": randint(2, 20),\n",
+    "    \"min_samples_leaf\": randint(1, 10),\n",
+    "    \"max_features\": uniform(0.1, 0.9)                \n",
+    "}\n",
+    "\n",
+    "# Initialize randomized search object\n",
+    "rf_random_search = RandomizedSearchCV(\n",
+    "    estimator=rf, \n",
+    "    param_distributions=rf_param_distributions, \n",
+    "    n_iter=50,\n",
+    "    cv=5, \n",
+    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit the random search to the training data\n",
+    "rf_random_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a40e89ff-bac7-4401-8b69-1ebb1f782de1",
    "metadata": {},
