In machine_learning_template.ipynb, in Modeling (Classification) > Hyperparameter Tuning > Random Search, add code to show top 10 hyperparameter combinations for model 1 (random forest classifier)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3720,6 +3720,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4f52f2a-3390-4b2f-a0d2-8483a069b80e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of randomized search results\n",
+    "rf_random_search_results = pd.DataFrame({\n",
+    "    \"validation_accuracy\": -1 * rf_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
+    "    \"parameters\": rf_random_search.cv_results_[\"params\"]  # parameter values\n",
+    "})\n",
+    "\n",
+    "# Extract each hyperparameter as a separate column\n",
+    "rf_random_search_results[\"n_estimators\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "rf_random_search_results[\"max_depth\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "rf_random_search_results[\"min_samples_split\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_split\"])\n",
+    "rf_random_search_results[\"min_samples_leaf\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"min_samples_leaf\"])\n",
+    "rf_random_search_results[\"max_features\"] = rf_random_search_results[\"parameters\"].apply(lambda x: x[\"max_features\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "rf_random_search_results = rf_random_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models \n",
+    "print(rf_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a40e89ff-bac7-4401-8b69-1ebb1f782de1",
    "metadata": {},
