In machine_learning_template.ipynb, in Modeling (Classification) and Modeling (Regression) > Hyperparameter Tuning > update code to show top 10 models for both grid and random search

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2397,7 +2397,7 @@
     "rf_grid_search_results = rf_grid_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
     "# Show the top 10 best performing models\n",
-    "rf_grid_search_results.sort_values(\"validation_rmse\")[:10]"
+    "print(rf_grid_search_results.sort_values(\"validation_rmse\").head(10))"
    ]
   },
   {
@@ -2479,7 +2479,7 @@
     "xgb_grid_search_results = xgb_grid_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
     "# Show the top 10 best performing models\n",
-    "xgb_grid_search_results.sort_values(\"validation_rmse\")[:10]"
+    "print(xgb_grid_search_results.sort_values(\"validation_rmse\").head(10))"
    ]
   },
   {
@@ -2589,8 +2589,8 @@
     "# Delete the parameters column\n",
     "rf_random_search_results = rf_random_search_results.drop(\"parameters\", axis=1)\n",
     "\n",
-    "# Show the top 10 best performing models sorted by validation RMSE\n",
-    "rf_random_search_results.sort_values(\"validation_rmse\")[:10]"
+    "# Show the top 10 best performing models \n",
+    "print(rf_random_search_results.sort_values(\"validation_rmse\", ascending=False).head(10))"
    ]
   },
   {
