In machine_learning_template.ipynb, Setup > Imports section, move import of BaseEstimator and TransformerMixin to Data Preprocessing > Handling Outliers section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -128,7 +128,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
@@ -594,6 +593,17 @@
    "metadata": {},
    "source": [
     "## Handling Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16c361d5-d89b-49af-a64b-f95995b3ea1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports for creating a custom transformer class to handle outliers\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin"
    ]
   },
   {
