In machine_learning_template.ipynb, Setup > Imports section, move import of pickle and os to Modeling (Regression & Classification) > Final Model > Saving model section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -140,9 +140,7 @@
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from xgboost import XGBRegressor, XGBClassifier\n",
-    "import xgboost as xgb\n",
-    "import pickle\n",
-    "import os"
+    "import xgboost as xgb"
    ]
   },
   {
@@ -2804,6 +2802,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
     "# Create models directory if it doesn't exist\n",
     "os.makedirs(\"models\", exist_ok=True)\n",
     "\n",
@@ -3943,6 +3945,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import pickle\n",
+    "import os\n",
+    "\n",
     "# Create models directory if it doesn't exist\n",
     "os.makedirs(\"models\", exist_ok=True)\n",
     "\n",
